# shaduler_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Claude code prompt.MD  Deploy.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: a9930c0fdfdd_initial.py
deploy/: docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh
deploy/nginx/: bot.conf
src/: config.py  exceptions.py  logging_config.py  main.py
src/api/: health.py  oauth_callback.py  webhook.py
src/bot/: keyboards.py  middlewares.py  setup.py
src/bot/handlers/: callbacks.py  connect.py  events.py  start.py
src/db/: session.py
src/db/repositories/: event_repo.py  oauth_credential_repo.py  user_repo.py
src/models/: __init__.py  event.py  oauth_credential.py  user.py
src/schemas/: parsed_message.py
src/security/: encryption.py  webhook_verify.py
src/services/: auth_service.py  calendar_service.py  event_service.py  parser_service.py  user_service.py
src/tasks/: refresh_tokens.py  retry_pending.py  scheduler.py
tests/: conftest.py
tests/integration/: test_oauth_flow.py  test_webhook_flow.py
tests/unit/: test_calendar_service.py  test_encryption.py  test_event_service.py  test_parser_service.py
